--- a/Assignment_2_Set_1_Q1_(Basic_Statistics_level_2).ipynb
+++ b/Assignment_2_Set_1_Q1_(Basic_Statistics_level_2).ipynb
@@ -6,7 +6,7 @@
       "name": "Assignment-2-Set-1-Q1 (Basic Statistics level-2).ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMV/zsjZskxV7qIjanzsZ0k",
+      "authorship_tag": "ABX9TyOMJPB3TZioMctYdLaMzjZh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,37 +36,9 @@
       "source": [
         "Look at the data given below. Plot the data, find the outliers and find out  μ,σ,σ^2\n",
         "\n",
-        "Name of company :- \n",
+        "Name of company and their measure -\n",
         "\n",
-        "Allied Signal 24.23%\n",
-        "\n",
-        "Bankers Trust 25.53%\n",
-        "\n",
-        "General Mills 25.41%\n",
-        "\n",
-        "ITT Industries 24.14%\n",
-        "\n",
-        "J.P.Morgan & Co. 29.62%\n",
-        "\n",
-        "Lehman Brothers 28.25%\n",
-        "\n",
-        "Marriott 25.81%\n",
-        "\n",
-        "MCI 24.39%\n",
-        "\n",
-        "Merrill Lynch 40.26%\n",
-        "\n",
-        "Microsoft 32.95%\n",
-        "\n",
-        "Morgan Stanley 91.36%\n",
-        "\n",
-        "Sun Microsystems 25.99%\n",
-        "\n",
-        "Travelers 39.42%\n",
-        "\n",
-        "US Airways 26.71%\n",
-        "\n",
-        "Warner-Lambert 35.00%\n",
+        "Allied Signal 24.23%, Bankers Trust 25.53%, General Mills 25.41%, ITT industries 24.14%, J.P.Morgan & Co. 29.62%, Lehman Brothers 28.25%, Marriott 25.81%, MCI 24.39%, Merrill Lynch 40.26%, Microsoft 32.95%, Morgan Stanley 91.36%, Sun Microsystems 25.99%, Travelers 39.42%, US Airways 26.71%, Warner-Lambert 35.00%\n",
         "\n"
       ]
     },
